tests/parser/spmd/test_01.m.octave.out
In test_01.m, line 4
|   spmd
|   ^^^^ style: end statement with a semicolon
In test_01.m, line 8
| end
| ^^^ error: expected end of file, found KEYWORD instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 style issue(s), 1 error(s)
